add and update some game methods